--- a/css/styles.css
+++ b/css/styles.css
@@ -139,3 +139,12 @@ a.custom-card:hover {
 .checked {
   color: orange;
 }
+
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+  box-shadow: 5px 10px #dddada;
+}
+
