--- a/css/styles.css
+++ b/css/styles.css
@@ -140,32 +140,6 @@ a.custom-card:hover {
   color: orange;
 }
 
-body {
-  background-image:url('image1.jpg');
-  background-position:center;
-  background-size:cover;
-  
-  -webkit-font-smoothing: antialiased;
-  font: normal 14px Roboto,arial,sans-serif;
-  font-family: 'Dancing Script', cursive!important;
-}
-
-.container {
-    padding: 110px;
-}
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: #ffffff!important;
-    opacity: 1; /* Firefox */
-    font-size:18px!important;
-}
-
-.form-control{
-    background:transparent!important;
-    color:white!important;
-    font-size: 18px!important;
-}
-
-*{color: #fff}
 .form-signin {
   width: 100%;
   max-width: 330px;
@@ -193,25 +167,6 @@ background-position:center;
   font-size: 18px!important;
 }
 
-body {
-  height: 100%;
-}
-
-body {
-  display: -ms-flexbox;
-  display: -webkit-box;
-  display: flex;
-  -ms-flex-align: center;
-  -ms-flex-pack: center;
-  -webkit-box-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  justify-content: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: #f5f5f5;
-}
-
 .form-signin {
   width: 100%;
   max-width: 330px;
@@ -228,10 +183,8 @@ body {
   padding: 10px;
   font-size: 16px;
 }
-.form-signin .form-control:focus {
-  z-index: 2;
-}
-.form-signin input[type="email"] {
+
+.form-signin input[type="user"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
