--- a/css/styles.css
+++ b/css/styles.css
@@ -195,4 +195,14 @@ background-position:center;
   border-top-right-radius: 0;
 }
 
+#error {
+  border: 1px solid #F00; background: #FF6347;}
+  .errMsg { color: #C33; }
+
+  #error2 {
+    border: 1px solid #F00; background: #FF6347;}
+    .errMsg { color: #C33; }
+  
+
+
 
