--- a/css/styles.css
+++ b/css/styles.css
@@ -203,7 +203,41 @@ background-position:center;
     border: 0px solid #F00; background: #FF6347;}
     .errMsg { color: #C33; }
   
-
+    #form {
+      width: 250px;
+      margin: 0 auto;
+      height: 50px;
+    }
+    
+    #form p {
+      text-align: center;
+    }
+    
+    #form label {
+      font-size: 20px;
+    }
+    
+    input[type="radio"] {
+      display: none;
+    }
+    
+    label {
+      color: grey;
+    }
+    
+    .clasificacion {
+      direction: rtl;
+      unicode-bidi: bidi-override;
+    }
+    
+    label:hover,
+    label:hover ~ label {
+      color: orange;
+    }
+    
+    input[type="radio"]:checked ~ label {
+      color: orange;
+    }
     
 
 
