--- a/css/styles.css
+++ b/css/styles.css
@@ -246,8 +246,46 @@ background-position:center;
        }
     
       #required {
+        width: 400px;
         border: 0px solid #F00; background: #FF6347;}
         .errMsg { color: #C33; }
+
+        
+      #imgages {
+          width: 300px; height: 300px;
+      }
       
+      #images:hover  {
+          border: 5px solid #f7f7f7;
+      }
+    
+      #comment {
+        border: 2px solid #dedede;
+  background-color: #f1f1f1;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px 0;
+  
+}
 
+#exito {
+  width: 400px;
+  border: 0px solid rgb(26, 182, 65); background: #129b46;}
+  .errMsg { color: rgb(51, 204, 102);
+   }
 
+   #exito2 {
+    width: 400px;
+    border: 0px solid rgb(26, 182, 65); background: #129b46;}
+    .errMsg { color: rgb(51, 204, 102);
+     }
+  
+#inputComment{
+  border: 2px solid #dedede;
+  background-color: #f1f1f1;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px 0;
+}
+
+      
