--- a/css/styles.css
+++ b/css/styles.css
@@ -288,4 +288,19 @@ background-position:center;
   margin: 10px 0;
 }
 
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
       
