--- a/css/styles.css
+++ b/css/styles.css
@@ -242,15 +242,17 @@ background-position:center;
     }
     
     #requerido {
-      width: 400px;
-      border: 0px solid #F00; background: #FF6347;}
-      .errMsg { color: #C33;
+      width: 100%;
+  margin-top: .25rem;
+  font-size: 90%;
+  color: #fd0707;
        }
     
       #required {
-        width: 400px;
-        border: 0px solid #F00; background: #FF6347;}
-        .errMsg { color: #C33; }
+        width: 100%;
+  margin-top: .25rem;
+  font-size: 90%;
+  color: #fd0707;}
 
         
       #imgages {
