--- a/css/styles.css
+++ b/css/styles.css
@@ -523,3 +523,12 @@ h4{text-align: center}
   font-size: 90%;
   color: #fd0707;
 }
+
+.c {
+  line-height: 200px;
+  height: 200px;
+  
+  text-align: center;
+  
+}
+
